2012-10-29  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* sem_destroy.c: Remove NULL argument checks. These are only useful
	to guard against some uninitialised arguments, not an invalid sem_t.
	* sem_wait.c: Likewise.
	* sem_post.c: Likewise.
	* sem_post_multiple.c: Likewise.
	* sem_timedwait.c: Likewise.
	* sem_trywait.c: Likewise.
	* ptw32_semwait.c: Likewise.

2012-10-28  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* implement.h: sem_t_ replace internal state mutex with MCS lock.
	* sem_init.c: Rewrite to use MCS lock rather than mutex.
	* sem_destroy.c: Likewise.
	* sem_wait.c: Likewise.
	* sem_post.c: Likewise.
	* sem_post_multiple.c: Likewise.
	* sem_timedwait.c: Likewise.
	* sem_trywait.c: Likewise.
	* ptw32_semwait.c: Likewise.

2012-10-26	sicaf-- at hanmail dot net

	* error.c: For WinCE use a more specific cast.
	* implement.h: For WinCE don't include process.h.
	* pthread_win32_attach_detach_np.c: For WinCE don't restrict QUserEx.dll
	search to system path.

2012-10-24  Stephane Clairet <Stephane dot Clairet at 4d dot com>

	* pthread_key_delete.c: Bug fix - move keylock release to after the
	while loop. (This bug first was introduced at release 2.9.1) 

2012-10-16  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile: Remove SDK environment setting; now needs to be done
	explicitly before running any nmake.
	* GNUmakefile: Move per command-line ARCH setting to TESTS_ENV.

2012-10-04  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* pthread_tryjoin_np.c: New API
	* pthread.c (pthread_try_join_np): Added.
	* common.mk (pthread_tryjoin_np): Added.
	* pthread.h (pthread_tryjoin_np): Added.
	* NEWS: Updated.
	* README: Updated.
	* ANNOUNCE: Updated.

2012-10-02  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* sched.h (cpu_set_t): Redefined.
	* implement.h (_sched_cpu_set_vector_): Created as the private equivalent
	of cpu_set.
	(pthread_thread_t_.cpuset): Type change. 